--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,280 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.circle{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-left: 40px;
+  margin-top: 40px;
+  
+}
+
+.circle-1{
+  height: 100px;
+  width: 100px;
+  border: 5px solid black;
+  border-radius: 5000px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  background-color: #cccccc;
+}
+
+.circle-2{
+  height: 50px;
+  width: 50px;
+  border: 5px solid black;
+  border-radius: 5000px;
+}
+
+.circle-3{
+  height: 100px;
+  width: 100px;
+  border: 5px solid black;
+  border-radius: 5000px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #cccccc;
+}
+
+.circle-4{
+  height: 50px;
+  width: 50px;
+  border: 5px solid black;
+  border-radius: 5000px;
+}
+
+
+.circled{
+  display: flex;
+  margin-left: 500px;
+  margin-top: 20px;
+}
+
+
+
+.square-1{
+  display: inline-block;
+  width: 20px; 
+  height: 20px; 
+  background-color: grey; 
+  margin-right: 8px; 
+}
+.square-2{
+  display: inline-block;
+  width: 20px; 
+  height: 20px; 
+  background-color:brown; 
+  margin-right: 8px; 
+}
+.square-3{
+  display: inline-block;
+  width: 20px; 
+  height: 20px; 
+  background-color: blue; 
+  margin-right: 8px; 
+}
+.square-4{
+  display: inline-block;
+  width: 20px; 
+  height: 20px; 
+  background-color: green; 
+  margin-right: 8px; 
+}
+
+
+
+.points{
+  margin-left: 40px;
+  margin-top: -20px;
+}
+
+.table{
+  padding: 20px;
+  height: 380px;
+  width: 600px;
+  border: 2px solid black;
+  margin-left: 40px;
+  margin-top: 50px;
+ 
+ 
+}
+
+
+.table-1{
+  padding: 20px;
+  height: 380px;
+  width: 600px;
+  border: 2px solid black;
+  margin-left: 700px;
+  margin-top: -400px;
+ 
+
+ 
+}
+.heading{
+  display: flex;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: -30px;
+  gap: 70px;
+  
+  
+ }
+
+ .header-1{
+  display: flex;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  
+  gap: 80px;
+ }
+
+ .button{
+  margin-left: 400px;
+  margin-top: 100px;
+  height: 30px;
+  width: 300px;
+  background-color:deepskyblue;
+  text-align: center;
+  color: aliceblue;
+ border: rounded-lg;
+ }
+
+ .point-data{
+    display: flex;
+ }
+
+ 
+
+
+ 
+ .data-1{
+  margin-left: 20px;
+  margin-top: 20px;
+ 
+ }
+
+ .odata{
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+ }
+
+
+ .line {
+  border-right: 1px solid #000; 
+  height: 200px; 
+}
+
+.date{
+  display: flex;
+  margin-left: 90px;
+  gap: 200px;
+  padding: 20px;
+  
+}
+ 
+.info{
+  display: flex;
+  gap: 200px;
+  margin-left: 30px;
+}
+
+.btn{
+  margin-left: 300px;
+  background-color: darkcyan;
+  width: 200px;
+  height: 40px;
+  font: bold;
   color: white;
+  margin-top: 40px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.button-1{
+  
+    background-color: grey; 
+    height: 50px;
+    margin-top: 6px;
+    border: none;
+    color: white;
+    padding: 10px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin-left: -50px;
+    border-radius: 30px;
+  }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+  .button-0{
+  
+    background-color: grey; 
+    height: 50px;
+    margin-top: 6px;
+    border: none;
+    margin-left: -50px;
+    color: white;
+    padding: 10px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    border-radius: 30px;
   }
-  to {
-    transform: rotate(360deg);
+
+
+  .button-2{
+  
+    background-color: brown; 
+    border-radius: 30px;
+    height: 50px;
+    margin-top: 6px;
+    border: none;
+    margin-left: -50px;
+    color: white;
+    padding: 10px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
   }
-}
+
+  .button-3{
+  
+    background-color:blue; 
+    height: 50px;
+    margin-top: 6px;
+    border: none;
+    margin-left: -50px;
+    color: white;
+    padding: 10px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    border-radius: 30px;
+  }
+
+  .button-4{
+  
+    background-color:green; 
+    height: 50px;
+    margin-top: 6px;
+    border: none;
+    margin-left: -50px;
+    color: white;
+    padding: 10px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    border-radius: 30px;
+  }
+
+  .grid{
+    margin-left: 64px;
+  }
+
+  .grid-1{
+    margin-left: 25px;
+  }
